@@ -2,6 +2,7 @@
  	Jelmer Vernooij <jelmer@vernstok.nl>
 
 Ctrlproxy 2.7:
+ * Add 'debug' module for easier debugging
  * Make sure modules are never loaded twice (Daniel Poelzleithner
 											 <ctrlproxy@poelzi.org>)
  * Support binding on a specific IP in socket module (Daniel Poelzleithner
